tests/compile-error/unknown_symbols.lang
fn main() -> i32 {
    test(&bar);
}
